# fastapi-crud-postgre-app

./: README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: post.py
